tika-core first commit