@@ -1,17 +1,15 @@
 /**
- * Licensed to the Apache Software Foundation (ASF) under one or more
- * contributor license agreements.  See the NOTICE file distributed with
- * this work for additional information regarding copyright ownership.
- * The ASF licenses this file to You under the Apache License, Version 2.0
- * (the "License"); you may not use this file except in compliance with
- * the License.  You may obtain a copy of the License at
- * <p>
- * http://www.apache.org/licenses/LICENSE-2.0
- * <p>
- * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS,
- * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- * See the License for the specific language governing permissions and
+ * Licensed to the Apache Software Foundation (ASF) under one or more contributor license
+ * agreements. See the NOTICE file distributed with this work for additional information regarding
+ * copyright ownership. The ASF licenses this file to You under the Apache License, Version 2.0 (the
+ * "License"); you may not use this file except in compliance with the License. You may obtain a
+ * copy of the License at
+ *
+ * <p>http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * <p>Unless required by applicable law or agreed to in writing, software distributed under the
+ * License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either
+ * express or implied. See the License for the specific language governing permissions and
  * limitations under the License.
  */
 package org.apache.tika.config;
@@ -26,7 +24,6 @@ import java.net.URI;
 import java.net.URL;
 import java.util.ArrayList;
 import java.util.List;
-
 import org.junit.jupiter.api.Test;
 
 public class ParamTest {
@@ -39,11 +36,20 @@ public class ParamTest {
         list.add("brown");
         list.add("fox");
         Object[] objects =
-                new Object[]{list, Integer.MAX_VALUE, 2.5f, 4000.57576, true, false, Long.MAX_VALUE,
-                        "Hello this is a boring string", new URL("http://apache.org"),
-                        new URI("tika://org.apache.tika.ner.parser?impl=xyz"),
-                        new BigInteger(Long.MAX_VALUE + "").add(
-                                new BigInteger(Long.MAX_VALUE + "")), new File("."),};
+                new Object[] {
+                    list,
+                    Integer.MAX_VALUE,
+                    2.5f,
+                    4000.57576,
+                    true,
+                    false,
+                    Long.MAX_VALUE,
+                    "Hello this is a boring string",
+                    new URL("http://apache.org"),
+                    new URI("tika://org.apache.tika.ner.parser?impl=xyz"),
+                    new BigInteger(Long.MAX_VALUE + "").add(new BigInteger(Long.MAX_VALUE + "")),
+                    new File("."),
+                };
 
         for (Object object : objects) {
             String name = "name" + System.currentTimeMillis();
@@ -64,5 +70,4 @@ public class ParamTest {
             assertEquals(loaded.getType(), object.getClass());
         }
     }
-
 }
